[tool.poetry]
name = 'jvq_analysis'
version = '0.1.0'
description = ''
authors = []

[tool.poetry.dependencies]
python = '>=3.7'
openpyxl = '3.0.10'

[tool.poetry.dev-dependencies]
black = '22.12.0'
flake8 = '5.0.4'
isort = '5.11.4'
mypy = '0.991'

[tool.black]
line-length = 200

[tool.isort]
profile = 'black'
py_version = 310
line_length = 200
follow_links = false

[tool.mypy]
python_version = '3.7'
disallow_any_generics = true
disallow_untyped_defs = true
follow_imports = 'silent'
ignore_missing_imports = true
namespace_packages = true
warn_redundant_casts = true
warn_unused_ignores = true
